# nucleo64-piezoelectric-knock-sensor-rust

./: Cargo.toml  Readme.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs
