[package]
authors = ["Tom Boland <github@t0mb.net>"]
edition = "2018"
readme = "README.md"
name = "nucleo64-piezoelectric-knock-sensor-rust"
version = "0.1.0"

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
embedded-hal = "*"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[dependencies.stm32f4xx-hal]
version = "*"
features = ["stm32f401"]

#[dependencies.stm32f4]
#features = ["rt", "stm32f401"]
#version = "*"

# this lets you use `cargo fix`!
[[bin]]
name = "nucleo64-piezoelectric-knock-sensor-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
